--- a/systeme_7_connaissance_avec_planetes_scroll_controls_keys.html
+++ b/systeme_7_connaissance_avec_planetes_scroll_controls_keys.html
@@ -14,11 +14,15 @@
       width: 100vw;   /* 1/1 de la largeur de l'écran */
       text-align: center;
     }
+    
+    @media (max-width: 900px){
+      #toggleScrollBtn { font-size: 20px; }
+    }
+    
   </style>
 </head>
 <body>
 <button id="toggleScrollBtn" style="position:fixed;top:12px;left:12px;padding:8px 14px;font-family:system-ui,Arial,sans-serif;font-size:14px;border:0;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,.2);cursor:pointer;z-index:9999;">Pause</button>
-
 
 <canvas id="space"></canvas>
 
